...
      {
        Right ?
          <Right /> :
          isHome ?
            <View style={{ flex: 1, justifyContent: 'center' }}>
              <TouchableOpacity
                testID="menu-button"
                onPress={() => navigation.toggleDrawer()}
                style={{ flexDirection: "row" }}
              >
                <Ionicons
                  name="menu"
                  size={30}
...
                />
              </TouchableOpacity>
            </View>
            :
            <View style={{ flex: 1, justifyContent: 'center' }}>
              <TouchableOpacity
                testID="back-button"
                onPress={() => onBackPress ? onBackPress() : navigation.goBack()}
                style={{ flexDirection: "row" }}
              >
                <Feather
                  name={isRTL() ? "arrow-right" : "arrow-left"}
                  size={30}
...
